Tests an Nutzung von ScoringID angepasst.